# file-help-gui

./: Cargo.toml  LICENSE  README.md
app-core/: Cargo.toml
app-core/src/: error.rs  extraction.rs  lib.rs  parser.rs
file-help-converter/: Cargo.toml
file-help-converter/src/: error.rs  lib.rs
file-help-ui/: Cargo.toml
file-help-ui/src/: main.rs
file-help-ui/ui/: document_converter_view.slint  extraction_view.slint  image_converter_view.slint  main.slint  theme.slint
